--- a/demos/multi-track/src/main/res/layout/activity_main.xml
+++ b/demos/multi-track/src/main/res/layout/activity_main.xml
@@ -5,10 +5,12 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">
-  <TextView
+
+  <Button
+    android:id="@+id/btn_multi_player"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Hello World!"
+    android:text="多播放器实例"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
