--- a/demos/multi-track/src/main/res/layout/activity_multi_track.xml
+++ b/demos/multi-track/src/main/res/layout/activity_multi_track.xml
@@ -12,6 +12,8 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    app:layout_constraintTop_toTopOf="parent"
+    tools:itemCount="5"
+    tools:listitem="@layout/layout_listitem_song_track" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
