--- a/demos/multi-track/src/main/res/layout/layout_listitem_song_track.xml
+++ b/demos/multi-track/src/main/res/layout/layout_listitem_song_track.xml
@@ -3,7 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  android:layout_height="65dp">
 
   <SeekBar
     android:id="@+id/seek_bar"
@@ -38,5 +38,13 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:text="吉他" />
+
+  <com.google.android.material.switchmaterial.SwitchMaterial
+    android:id="@+id/swt_track"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintBottom_toBottomOf="@+id/tv_track_name"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/tv_track_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
